refactor(scripts): enhance quick_scan tools with rule-based catalog system
Refatora `quick_scan` para adoção de catálogo centralizado de regras (`quick_scan_rules.txt`) com suporte a severidade ajustável (`-FailOn`), novos escopos de análise (Kubernetes, Dockerfile, GitHub Actions), e compatibilidade expandida (PowerShell e Bash).